--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -14,50 +14,73 @@ env:
   GAR_ZONE: asia-southeast1-a # artifact registry zone
   GAR_REPO: airflow-gke # artifact registry repository
 
+# jobs:
+#   setup-build-publish-deploy:
+#     name: Setup, Build, Publish, and Deploy
+#     runs-on: ubuntu-latest
+#     environment: production
+
+#     steps:
+#     - name: Checkout
+#       uses: actions/checkout@v3
+
+#     # Setup gcloud CLI
+#     - id: 'auth'
+#       uses: 'google-github-actions/auth@v0'
+#       with:
+#         credentials_json: '${{ secrets.GKE_SA_KEY }}'
+
+#     # Configure Docker to use the gcloud command-line tool as a credential
+#     # helper for authentication
+#     - name: Docker configuration
+#       run: |-
+#         gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://$GAR_ZONE-docker.pkg.dev
+
+#     # Get the GKE credentials so we can deploy to the cluster
+#     - name: Set up GKE credentials
+#       uses: google-github-actions/get-gke-credentials@v0
+#       with:
+#         cluster_name: ${{ env.GKE_CLUSTER }}
+#         location: ${{ env.GKE_ZONE }}
+
+#     # Build the Docker image
+#     - name: Build
+#       run: |-
+#         docker build \
+#           --tag "$GAR_ZONE-docker.pkg.dev/$PROJECT_ID/$GAR_REPO/$IMAGE:$IMAGE_TAG" \
+#           --build-arg GITHUB_SHA="$GITHUB_SHA" \
+#           --build-arg GITHUB_REF="$GITHUB_REF" \
+#           .
+#     # Push the Docker image to Google Container Registry
+#     - name: Publish
+#       run: |-
+#         docker push "$GAR_ZONE-docker.pkg.dev/$PROJECT_ID/$GAR_REPO/$IMAGE:$IMAGE_TAG"
+
+#     # # Deploy the Docker image to the GKE cluster
+#     # - name: Deploy
+#     #   run: |-
+#     #     kubectl apply -f deploy.yml
+#     #     kubectl get pods
+
 jobs:
-  setup-build-publish-deploy:
-    name: Setup, Build, Publish, and Deploy
+  deploy:
     runs-on: ubuntu-latest
-    environment: production
-
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
 
-    # Setup gcloud CLI
-    - id: 'auth'
-      uses: 'google-github-actions/auth@v0'
+    - name: code checkout
+      uses: actions/checkout@v2
+
+    - name: install the gcloud cli
+      uses: google-github-actions/setup-gcloud@v0
       with:
-        credentials_json: '${{ secrets.GKE_SA_KEY }}'
+        project_id: $${{ env.PROJECT_ID }}
+        service_account_key: ${{ secrets.GKE_SA_KEY }}
+        export_default_credentials: true
 
-    # Configure Docker to use the gcloud command-line tool as a credential
-    # helper for authentication
-    - name: Docker configuration
-      run: |-
-        gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://$GAR_ZONE-docker.pkg.dev
-
-    # Get the GKE credentials so we can deploy to the cluster
-    - name: Set up GKE credentials
-      uses: google-github-actions/get-gke-credentials@v0
-      with:
-        cluster_name: ${{ env.GKE_CLUSTER }}
-        location: ${{ env.GKE_ZONE }}
-
-    # Build the Docker image
-    - name: Build
-      run: |-
-        docker build \
-          --tag "$GAR_ZONE-docker.pkg.dev/$PROJECT_ID/$GAR_REPO/$IMAGE:$IMAGE_TAG" \
-          --build-arg GITHUB_SHA="$GITHUB_SHA" \
-          --build-arg GITHUB_REF="$GITHUB_REF" \
-          .
-    # Push the Docker image to Google Container Registry
-    - name: Publish
-      run: |-
+    - name: build and push the docker image
+      env:
+        GOOGLE_PROJECT: ${{ env.PROJECT_ID }}
+      run: |
+        gcloud auth configure-docker us-central1-docker.pkg.dev
+        docker build -t "$GAR_ZONE-docker.pkg.dev/$PROJECT_ID/$GAR_REPO/$IMAGE:$IMAGE_TAG ."
         docker push "$GAR_ZONE-docker.pkg.dev/$PROJECT_ID/$GAR_REPO/$IMAGE:$IMAGE_TAG"
-
-    # # Deploy the Docker image to the GKE cluster
-    # - name: Deploy
-    #   run: |-
-    #     kubectl apply -f deploy.yml
-    #     kubectl get pods
