fix typo in deployment yaml

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -73,7 +73,7 @@ jobs:
     - name: install the gcloud cli
       uses: google-github-actions/setup-gcloud@v0
       with:
-        project_id: $${{ env.PROJECT_ID }}
+        project_id: ${{ env.PROJECT_ID }}
         service_account_key: ${{ secrets.GKE_SA_KEY }}
         export_default_credentials: true
 
