--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -63,7 +63,7 @@ env:
 #     #     kubectl get pods
 
 jobs:
-  deploy:
+  deploy-image-to-gar:
     runs-on: ubuntu-latest
     steps:
 
@@ -71,11 +71,12 @@ jobs:
       uses: actions/checkout@v2
 
     - name: install the gcloud cli
-      uses: google-github-actions/setup-gcloud@v0
+      uses: google-github-actions/auth@v1
       with:
-        project_id: ${{ env.PROJECT_ID }}
-        service_account_key: ${{ secrets.GKE_SA_KEY }}
-        export_default_credentials: true
+        # project_id: ${{ env.PROJECT_ID }}
+        # service_account_key: ${{ secrets.GKE_SA_KEY }}
+        # export_default_credentials: true
+        credentials_json: ${{ secrets.GKE_SA_KEY }}
 
     - name: build and push the docker image
       env:
